# digital_matter

./: README.md  deploy.sh  doover_config.json  pyproject.toml  test.py
device_code/: README.md
helloworld/: target.py
helloworld/pydoover/: __version__.py
helloworld/pydoover-0.1.0.dist-info/: METADATA  RECORD  direct_url.json
helloworld/pydoover/cli/: cli.py
helloworld/pydoover/cloud/api/: agent.py  client.py  message.py
helloworld/pydoover/cloud/processor/: base.py
helloworld/pydoover/docker/: __init__.py  doover_docker.py
helloworld/pydoover/docker/camera/: __init__.py  camera_manager.py  power_management.py
helloworld/pydoover/docker/camera/grpc_stubs/: camera_iface_pb2.py  camera_iface_pb2_grpc.py
helloworld/pydoover/docker/device_agent/: device_agent.py
helloworld/pydoover/docker/device_agent/grpc_stubs/: device_agent_pb2_grpc.py
helloworld/pydoover/docker/platform/: platform.py
helloworld/pydoover/ui/: __init__.py  __main__.py  ui_manager.py
processor/: pydoover.py  target.py
processor/project/: __init__.py
processor/pydoover/cli/: config.py  parsers.py
processor/pydoover/cloud/api/: channel.py
processor/pydoover/docker/: hello_world.py
processor/pydoover/docker/camera/: camera.py
processor/pydoover/docker/modbus/: modbus_iface.py
processor/pydoover/ui/: ui_elements.py
src/g62/: app_ui.py
src/integration/: __init__.py  app_config.py  application.py
src/processor/: __init__.py  app_config.py  app_tags.py  app_ui.py  application.py
tests/: test_imports.py
(+8 files in other folders)
