[project]
name = "digital-matter-connector"
version = "0.1.0"
description = "Doover integration for Digital Matter GPS tracking devices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydoover>=0.4.13",
]

[project.scripts]
export-config-integration = "integration.app_config:export"
export-config-processor = "processor.app_config:export"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/integration", "src/processor"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]

[tool.uv.sources]
pydoover = { git = "https://github.com/getdoover/pydoover", branch = "doover-2" }
